deploy/minastirithlego-homes/21-minastirithlego-homes-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: minastirithlego-homes
  namespace: minastirithlego-homes
  labels:
    app.kubernetes.io/name: minastirithlego-homes
    app.kubernetes.io/part-of: minastirithlego-homes
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: minastirithlego-homes
    app.kubernetes.io/part-of: minastirithlego-homes
  ports:
    - name: http
      port: 80
      targetPort: 80
